service.yaml
apiVersion: v1
kind: Service
metadata:
  name: photo-app
spec:
  selector:
    app: photo-app

    ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
    type: NodePort
