photostudio-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: photostudio-ingress
  namespace: default
  annotations:
    haproxy.org/ssl-redirect: "false"
spec:
  ingressClassName: haproxy
  rules:
  - host: photostudio.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: photostudio-service
            port:
              number: 80
